--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           "Title: " + englishTitle.replace(/^Title: /, "")
         );
         $("#alternative-title").text(
-          "Other title " + alternativeTitle.replace(/^Other title /, "")
+          "Other title: " + alternativeTitle.replace(/^Other title: /, "")
         );
         $("#subtitle").text("Subtitle " + subtitle.replace(/^Subtitle /, ""));
         reinstateSlidesInfo();
