--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         $("#alternative-title").text(
           "Other title: " + alternativeTitle.replace(/^Other title: /, "")
         );
-        $("#subtitle").text("Subtitle " + subtitle.replace(/^Subtitle /, ""));
+        $("#subtitle").text("Subtitle: " + subtitle.replace(/^Subtitle: /, ""));
         reinstateSlidesInfo();
         setupHoverEffects();
       }
