--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <link
       rel="stylesheet"
-      href="https://raw.githubusercontent.com/hchiam/slides/master/index.html/slides.css"
+      href="https://raw.githubusercontent.com/hchiam/slides/master/slides.css"
     />
     <script
       type="text/javascript"
-      src="https://raw.githubusercontent.com/hchiam/slides/master/index.html/slides.js"
+      src="https://raw.githubusercontent.com/hchiam/slides/master/slides.js"
     ></script>
   </body>
 </html>
