--- a/index.html
+++ b/index.html
@@ -73,5 +73,8 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/gh/hchiam/slides@master/slides.js"
     ></script>
+    <!-- for local testing: -->
+    <!-- <link rel="stylesheet" href="slides.css" /> -->
+    <!-- <script type="text/javascript" src="slides.js"></script> -->
   </body>
 </html>
