enable saving (#1): WIP

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       >
         ＋ Add slide
       </button>
+      <button id="save" class="ui button tiny" type="button">
+        Save slides
+      </button>
       <div id="snackbar">(Click to edit.)</div>
     </div>
 
@@ -71,10 +74,15 @@
     />
     <script
       type="text/javascript"
+      src="https://cdn.jsdelivr.net/gh/hchiam/slides@master/data.js"
+    ></script>
+    <script
+      type="text/javascript"
       src="https://cdn.jsdelivr.net/gh/hchiam/slides@master/slides.js"
     ></script>
     <!-- for local testing: -->
     <!-- <link rel="stylesheet" href="slides.css" /> -->
-    <!-- <script type="text/javascript" src="slides.js"></script> -->
+    <!-- <script type="text/javascript" src="data.js"></script>
+    <script type="text/javascript" src="slides.js"></script> -->
   </body>
 </html>
