--- a/index.html
+++ b/index.html
@@ -2,87 +2,24 @@
 <html>
   <head>
     <title>Slides</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
-    />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@2.0.0/makeElementDraggableAndEditable.js"
+      integrity="sha384-8liekxt1KgfCZ+rMs0cnUeab/bf2ddaGJXHQsKLd0RbRRH3PxCEkpmcRXiac5zRU"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="other-css/boilerplate.css"></link>
+    <script type="text/javascript" src="other-js/memory.js"></script>
+    <script type="text/javascript" src="other-js/debug.js"></script>
   </head>
   <body>
-    <div id="slide-controls">
-      <button
-        id="previous"
-        class="ui secondary button tiny"
-        type="button"
-        onclick="previous()"
-        disabled
-      >
-        ◀ Previous slide
-      </button>
-      <span
-        id="slide-number"
-        oninput="jumpToSlideNumberTyped()"
-        contenteditable
-      >
-        1
-      </span>
-      <button
-        id="next"
-        class="ui secondary button tiny"
-        type="button"
-        onclick="next()"
-      >
-        ＋ Add slide
-      </button>
-      <button id="save" class="ui button tiny" type="button">
-        Save slides
-      </button>
-      <div id="snackbar">(Click to edit.)</div>
-    </div>
-
-    <div id="slides">
-      <div id="slide-1">
-        <h2
-          id="english-title"
-          onkeyup="setSlidesInfo({...getSlidesInfo(),englishTitle:this.innerText});"
-        ></h2>
-        <h2
-          id="alternative-title"
-          onkeyup="setSlidesInfo({...getSlidesInfo(),alternativeTitle:this.innerText});"
-        ></h2>
-        <h3
-          id="subtitle"
-          onkeyup="setSlidesInfo({...getSlidesInfo(),subtitle:this.innerText});"
-        ></h3>
-      </div>
-    </div>
-
-    <!-- <button
-      id="delete"
-      class="ui secondary button tiny"
-      type="button"
-      onclick="deleteSlide()"
-    >
-      - Delete slide
-    </button> -->
-
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/hchiam/slides@master/slides.css"
-    />
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/gh/hchiam/slides@master/data.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/gh/hchiam/slides@master/slides.js"
-    ></script>
-    <!-- for local testing: -->
-    <!-- <link rel="stylesheet" href="slides.css" /> -->
-    <!-- <script type="text/javascript" src="data.js"></script>
-    <script type="text/javascript" src="slides.js"></script> -->
+    <button id="left" onclick="left()">◀</button>
+    <button id="right" onclick="right()">▶</button>
+    <button id="add_text" onclick="createNewText()">+</button>
+    <section id="current_slide">
+    </section>
+    <link rel="stylesheet" href="slides.css"></link>
+    <script type="text/javascript" src="slides.js"></script>
   </body>
 </html>
