--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <script type="text/javascript" src="other-js/debug.js"></script>
   </head>
   <body>
-    <button id="left" onclick="left()">◀</button>
+    <button id="left" onclick="left()" disabled>◀</button>
     <button id="right" onclick="right()">▶</button>
-    <button id="add_text" onclick="createNewText()">+</button>
+    <button id="add_text" onclick="createNewText()">abc</button>
+    <!-- <button id="add_image" onclick="createNewImage()">☐</button> -->
     <section id="current_slide">
     </section>
     <link rel="stylesheet" href="slides.css"></link>
