better slide number input UX

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       id="slide_number"
       min="1"
       type="number"
-      onkeypress="setSlideNumber(this.value)"
+      onkeyup="delayedSetSlideNumber(this.value)"
       onchange="setSlideNumber(this.value)"
       onmouseover="this.focus()"
     />
