enable adding big text (and possibly use other text properties in future)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <button aria-label="add text" id="add_text" onclick="createNewText()">
       abc
     </button>
+    <button
+      aria-label="add big text"
+      id="add_big_text"
+      onclick="createNewBigText()"
+    >
+      <span>abc</span>
+    </button>
     <!-- <button id="add_image" onclick="createNewImage()">☐</button> -->
     <section id="current_slide"></section>
     <link rel="stylesheet" href="slides.css" />
