plan for Save button

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <span>abc</span>
     </button>
     <!-- <button id="add_image" onclick="createNewImage()">☐</button> -->
+    <!-- <button id="save" onclick="save()">Save</button> -->
     <section id="current_slide"></section>
     <link rel="stylesheet" href="slides.css" />
     <script type="text/javascript" src="slides.js"></script>
