prevent accidental change of slide number

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       onkeyup="delayedSetSlideNumber(this.value)"
       onchange="setSlideNumber(this.value)"
       onmouseover="this.focus()"
+      onmouseleave="this.blur()"
     />
     <button
       aria-label="add text"
