refactor for consistent naming for text and image functions

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     >
       <span>abc</span>
     </button>
-    <button id="add_image" title="Add image" onclick="createNewImage()">
+    <button id="add_image" title="Add image" onclick="triggerCreateNewImage()">
       ☐
     </button>
     <input
