google material icons. tweak big text button text.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Slides</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script
@@ -56,10 +60,10 @@
       id="add_big_text"
       onclick="createNewBigText()"
     >
-      <span>abc</span>
+      <!-- <span>abc</span> -->
     </button>
     <button id="add_image" title="Add image" onclick="triggerCreateNewImage()">
-      ☐
+      <i class="material-icons">image</i>
     </button>
     <input
       aria-label="select image"
