--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="other-css/boilerplate.css" />
-    <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="other-js/debug.js"></script>
+    <script type="text/javascript" src="other-js/memory.js"></script>
+    <script type="text/javascript" src="other-js/texts.js"></script>
+    <script type="text/javascript" src="other-js/images.js"></script>
   </head>
   <body>
     <button
