more icon positioning tweaks

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
       title="Add BIG text"
       id="add_big_text"
       onclick="createNewBigText()"
-    >
-      <!-- <span>abc</span> -->
-    </button>
+    ></button>
     <button id="add_image" title="Add image" onclick="triggerCreateNewImage()">
       <i class="material-icons">image</i>
     </button>
