--- a/index.html
+++ b/index.html
@@ -27,53 +27,64 @@
     <script type="text/javascript" src="other-js/images.js"></script>
   </head>
   <body>
-    <button
-      aria-label="left"
-      title="Previous slide"
-      id="left"
-      onclick="left()"
-      disabled
-    >
-      ◀
-    </button>
-    <button aria-label="right" title="Next slide" id="right" onclick="right()">
-      ▶
-    </button>
-    <input
-      aria-label="slide number"
-      title="Slide number"
-      id="slide_number"
-      min="1"
-      type="number"
-      onkeyup="delayedSetSlideNumber(this.value)"
-      onchange="setSlideNumber(this.value)"
-      onmouseover="this.focus()"
-    />
-    <button
-      aria-label="add text"
-      title="Add text"
-      id="add_text"
-      onclick="createNewText()"
-    >
-      abc
-    </button>
-    <button
-      aria-label="add big text"
-      title="Add BIG text"
-      id="add_big_text"
-      onclick="createNewBigText()"
-    ></button>
-    <button id="add_image" title="Add image" onclick="triggerCreateNewImage()">
-      <i class="material-icons">image</i>
-    </button>
-    <input
-      aria-label="select image"
-      id="select_image"
-      onchange="readImage(this)"
-      type="file"
-      accept="image/*"
-    />
-    <!-- <button id="save" onclick="save()">Save</button> -->
+    <section id="controls">
+      <button
+        aria-label="left"
+        title="Previous slide"
+        id="left"
+        onclick="left()"
+        disabled
+      >
+        ◀
+      </button>
+      <button
+        aria-label="right"
+        title="Next slide"
+        id="right"
+        onclick="right()"
+      >
+        ▶
+      </button>
+      <input
+        aria-label="slide number"
+        title="Slide number"
+        id="slide_number"
+        min="1"
+        type="number"
+        onkeyup="delayedSetSlideNumber(this.value)"
+        onchange="setSlideNumber(this.value)"
+        onmouseover="this.focus()"
+      />
+      <button
+        aria-label="add text"
+        title="Add text"
+        id="add_text"
+        onclick="createNewText()"
+      >
+        abc
+      </button>
+      <button
+        aria-label="add big text"
+        title="Add BIG text"
+        id="add_big_text"
+        onclick="createNewBigText()"
+      ></button>
+      <button
+        id="add_image"
+        title="Add image"
+        onclick="triggerCreateNewImage()"
+      >
+        <i class="material-icons">image</i>
+      </button>
+      <input
+        aria-label="select image"
+        id="select_image"
+        onchange="readImage(this)"
+        type="file"
+        accept="image/*"
+      />
+      <!-- <button id="save" onclick="save()">Save</button> -->
+    </section>
     <section id="current_slide">
       <img id="image-1" src="" alt="" draggable />
     </section>
