--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
   </head>
-  <body>
+  <body onkeyup="detectArrowKeys(event)">
     <section id="controls">
       <button
         aria-label="left"
