saving works (almost - still need to trigger dialog)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <script src="other-js/makeElementDraggableAndEditable.js"></script>
     <link rel="stylesheet" href="other-css/boilerplate.css" />
     <script type="text/javascript" src="other-js/debug.js"></script>
-    <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
   </head>
@@ -89,10 +88,10 @@
         <i class="material-icons">save</i>
       </button>
     </section>
-    <section id="current_slide">
-      <img id="image-1" src="" alt="" draggable />
-    </section>
+    <section id="current_slide"></section>
     <link rel="stylesheet" href="slides.css" />
-    <script id="main_script" type="text/javascript" src="slides.js"></script>
+    <script id="save_memory_script" type="text/javascript"></script>
+    <script type="text/javascript" src="other-js/memory.js"></script>
+    <script type="text/javascript" src="slides.js"></script>
   </body>
 </html>
