fix #3: cross-browser + text colour dynamic

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
         title="Add BIG text"
         id="add_big_text"
         onclick="createNewBigText()"
-      ></button>
+      >
+        &nbsp;
+      </button>
       <button
         aria-label="Add image"
         title="Add image"
