controls look centered on load. animate show left button. correct some logic.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         id="left"
         onclick="left()"
         disabled
+        class="hide-on-first-load"
       >
         ◀
       </button>
