remove focus from slide number input after 3 seconds

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         type="number"
         onkeyup="delayedSetSlideNumber(this.value)"
         onchange="setSlideNumber(this.value)"
-        onmouseover="this.focus()"
+        onmouseover="focusSlideNumberInput()"
       />
       <span></span>
       <button
