dynamically update tooltip content with attr, css var, data-

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       >
         ◀
       </button>
-      <span></span>
+      <span data-before="Previous slide" style="--left: -5em"></span>
       <button
         aria-label="Next slide"
         title="Next slide"
@@ -47,7 +47,7 @@
       >
         ▶
       </button>
-      <span></span>
+      <span data-before="Next slide" style="--left: -4.2em"></span>
       <input
         aria-label="Slide number"
         title="Slide number"
