--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
         <i class="material-icons">upload</i>
       </button>
       <span></span>
+      <button
+        aria-label="Delete"
+        title="Delete"
+        id="delete"
+        onclick="deleteAll()"
+      >
+        <i class="material-icons">delete</i>
+      </button>
+      <span></span>
     </section>
     <section id="current_slide"></section>
     <link rel="stylesheet" href="slides.css" />
