smarter fullscreen button

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       >
         <i class="material-icons">fullscreen</i>
       </button>
-      <span></span>
+      <span data-before="Fullscreen" style="--left: -4.1em"></span>
       <button
         aria-label="Save slide data as JSON"
         title="Save slide data"
