--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
     <script type="text/javascript" src="other-js/fullscreen.js"></script>
+    <script type="text/javascript" src="other-js/laser.js"></script>
   </head>
   <body onkeyup="detectArrowKeys(event)">
     <section id="controls">
@@ -139,6 +140,7 @@
       <span></span>
     </section>
     <section id="current_slide"></section>
+    <div id="laser"></div>
     <link rel="stylesheet" href="slides.css" />
     <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="slides.js"></script>
