--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     ></script>
     <link rel="stylesheet" href="other-css/boilerplate.css" />
     <script type="text/javascript" src="other-js/debug.js"></script>
+    <script type="text/javascript" src="other-js/plugins.js"></script>
     <script type="text/javascript" src="other-js/a11y.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
