make dichotomy more obvious between save and reuse buttons

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         id="save"
         onclick="save()"
       >
-        <i class="material-icons">save</i>
+        <i class="material-icons">download</i>
       </button>
       <span></span>
       <input
