DOM comment issues link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="other-js/laser.js"></script>
   </head>
   <body onkeyup="detectArrowKeys(event)">
+    <!-- Found a bug? Feel free to report suggestions here: https://github.com/hchiam/slides/issues -->
     <section id="controls">
       <button
         aria-label="Previous slide"
