delete key: delete element after drag, delete character after dblclick or keyup

--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       rel="stylesheet"
     />
+    <!-- <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggable.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggableAndEditable.js"></script> -->
     <script
-      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@2.2.3/makeElementDraggable.js"
+      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.0.0/makeElementDraggable.js"
       integrity="sha384-QMYHwpvHc+xLaSjcXWMNVHfXgcYk3Q0zXa8BiMdP5Fx8c7HNGS3aJrQSu63/+P0a"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@2.2.3/makeElementDraggableAndEditable.js"
-      integrity="sha384-nC7HyURId0WM5hUofkeHuShrHkHffsd5NAZz5e3uSNiLy/pj1MPPFXCvJEeos6uO"
+      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.0.0/makeElementDraggableAndEditable.js"
+      integrity="sha384-32xYDmwCsT5TKRH10cHvjzyZmOk08xBgVk5wsWCeOsEtW0Hn3iIYJEJRBozEst0P"
       crossorigin="anonymous"
     ></script>
+    <!-- <script src="makeElementDraggable.js"></script>
+    <script src="makeElementDraggableAndEditable.js"></script> -->
     <link rel="stylesheet" href="other-css/boilerplate.css" />
     <script type="text/javascript" src="other-js/debug.js"></script>
     <script type="text/javascript" src="other-js/plugins.js"></script>
