--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </head>
   <body onkeyup="if(detectArrowKeys)detectArrowKeys(event)">
     <!-- Found a bug? Feel free to report suggestions here: https://github.com/hchiam/slides/issues -->
+    <section id="mobile_message"></section>
     <section id="controls">
       <button
         aria-label="Previous slide"
