fix #26: fullscreen via F11, f, or ⌘ + Shift + f

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="other-js/fullscreen.js"></script>
     <script type="text/javascript" src="other-js/laser.js"></script>
   </head>
-  <body onkeyup="if(detectArrowKeys)detectArrowKeys(event)">
+  <body>
     <!-- Found a bug? Feel free to report suggestions here: https://github.com/hchiam/slides/issues -->
     <section id="mobile_message"></section>
     <section id="controls">
