2dnote attempt backup

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       integrity="sha384-32xYDmwCsT5TKRH10cHvjzyZmOk08xBgVk5wsWCeOsEtW0Hn3iIYJEJRBozEst0P"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://cdn.jsdelivr.net/gh/hchiam/_2DNote@1.9.0/_2DNote.min.js"
+      integrity="sha384-w9KzgKC5k/00txI3ng7+D2iZ/1HiglYG7YpmTdR8NnwbCr+0qcGiaZC1JGzgOWgD"
+      crossorigin="anonymous"
+    ></script>
     <!-- <script src="makeElementDraggable.js"></script>
     <script src="makeElementDraggableAndEditable.js"></script> -->
     <link rel="stylesheet" href="other-css/boilerplate.css" />
