--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="other-css/boilerplate.css" />
     <script type="text/javascript" src="other-js/debug.js"></script>
     <script type="text/javascript" src="other-js/plugins.js"></script>
+    <script type="text/javascript" src="other-js/lz-string.js"></script>
+    <script type="text/javascript" src="other-js/compress.js"></script>
     <script type="text/javascript" src="other-js/a11y.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
