--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     />
     <!-- <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggable.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggableAndEditable.js"></script> -->
+    <!-- <script
+      src="https://cdn.rawgit.com/mozilla/localForage/master/dist/localforage.js"
+      integrity="sha384-ldHXHtaPrjivxDKHsTMb08y+sYko23IbIQqwHAGAcE0BoG88kpkgm6+++afuiGDb"
+      crossorigin="anonymous"
+    ></script> -->
     <script
       src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.0.0/makeElementDraggable.js"
       integrity="sha384-QMYHwpvHc+xLaSjcXWMNVHfXgcYk3Q0zXa8BiMdP5Fx8c7HNGS3aJrQSu63/+P0a"
@@ -32,6 +37,7 @@
     <script type="text/javascript" src="other-js/debug.js"></script>
     <script type="text/javascript" src="other-js/plugins.js"></script>
     <script type="text/javascript" src="other-js/a11y.js"></script>
+    <script type="text/javascript" src="other-js/localforage.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
     <script type="text/javascript" src="other-js/fullscreen.js"></script>
