use localForage (fix #41) - needed a few things:
- localForage CDN right above memory.js
- set memory inside readPersistentMemory() instead of returning it
- added callback inside readPersistentMemory to avoid using async/await
- readPersistentMemory and setUpInitialSlide inside useMemory

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     />
     <!-- <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggable.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggableAndEditable.js"></script> -->
-    <!-- <script
-      src="https://cdn.rawgit.com/mozilla/localForage/master/dist/localforage.js"
-      integrity="sha384-ldHXHtaPrjivxDKHsTMb08y+sYko23IbIQqwHAGAcE0BoG88kpkgm6+++afuiGDb"
-      crossorigin="anonymous"
-    ></script> -->
     <script
       src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.1.0/makeElementDraggable.js"
       integrity="sha384-HEvXA8ROpDajvXCA2Bp8arOr8CZWLQ7UoffoOwPNF9dRcIQGDY17yWmGBRLx5tNZ"
@@ -37,7 +32,6 @@
     <script type="text/javascript" src="other-js/debug.js"></script>
     <script type="text/javascript" src="other-js/plugins.js"></script>
     <script type="text/javascript" src="other-js/a11y.js"></script>
-    <script type="text/javascript" src="other-js/localforage.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
     <script type="text/javascript" src="other-js/fullscreen.js"></script>
@@ -132,6 +126,7 @@
       tabindex="-1"
     ></div>
     <link rel="stylesheet" href="slides.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.9.0/localforage.min.js"></script>
     <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="slides.js"></script>
   </body>
