got localForage working and cypress.io tests passing once

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         id="slide_number"
         min="1"
         type="number"
+        value="1"
         onkeyup="delayedSetSlideNumber(this.value)"
         onchange="setSlideNumber(this.value)"
         onmouseover="focusSlideNumberInput()"
