--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       rel="stylesheet"
     />
-    <!-- <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggable.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggableAndEditable.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggableAndEditable.js"></script> -->
     <script
-      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.2.0/makeElementDraggable.js"
-      integrity="sha384-FFS71Xf1AeZqSQCP4vOaP7cIRstRJhkvhTvL4YmjtW7XOSd8N7WJFE4FPnjUqLen"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.2.0/makeElementDraggableAndEditable.js"
-      integrity="sha384-A+jpCgdpYHwQJId5MfiKPZGF+RIyIB9/zPAHb0dG4H5YqQOPH/7j9XJKN2MyCOpA"
+      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.3.2/makeElementDraggableAndEditable.js"
+      integrity="sha384-vt5RO8lVE9KiJD/Hc+VcL9WsO+1M53cBpB71LFqiPZYtWi4RH5shFLSTOAi9YtUC"
       crossorigin="anonymous"
     ></script>
     <script
@@ -27,8 +21,7 @@
       integrity="sha384-WdS+mavw33iD6+LA5WvOOdklYxzu60nE9DdK9RlJITvWzSJPeF8pF1ln7VrWa+yC"
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="makeElementDraggable.js"></script>
-    <script src="makeElementDraggableAndEditable.js"></script> -->
+    <!-- <script src="makeElementDraggableAndEditable.js"></script> -->
     <link rel="stylesheet" href="other-css/boilerplate.css" />
     <script type="text/javascript" src="other-js/debug.js"></script>
     <script type="text/javascript" src="other-js/plugins.js"></script>
