--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta name="description" content="Simple slides. Edit. Present." />
     <title>Simple Slides</title>
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <script>
+      if (navigator.serviceWorker) {
+        navigator.serviceWorker.register("service-worker.js", {
+          scope: "",
+        });
+      }
+      // if ("serviceWorker" in navigator) {
+      //   window.addEventListener("load", () => {
+      //     navigator.serviceWorker.register("service-worker.js");
+      //   });
+      // }
+    </script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       rel="stylesheet"
